--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
     <!-- stylehseets -->
-    <link rel="stylesheet" href="./dist/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
