--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="qr-container">
       <div class="qr-code">
-        <img src="./images/image-qr-code.png" alt="QR Code" />
+        <img src="images/image-qr-code.png" alt="QR Code" />
       </div>
       <div class="text">
         <h2>
